# fibonacci

./: .gitignore  .valgrindrc  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac
scripts/: Makefile.am  aspell-pws  install-git-hooks  performance.sh  plot_spend_time.sh  pre-commit.hook  spend_time.gp
src/: Makefile.am  clock_time.h  fib.c  fib_doubling_gmp.c  fib_doubling_gmp_cpp.cpp  fib_doubling_mixing.c  fib_iterative_gmp.c  fib_recursion_gmp_cpp.cpp  fibonacci.c  fibonacci.h  fibonacci_dijkstra_gmp.c  fibonacci_dijkstra_gmp.h  fibonacci_gmp.c  fibonacci_gmp.h  fibonacci_io.c  fibonacci_io.h  main.c  ui256.h
tests/: Fibonacci.java  FibonacciDict.java  Makefile.am  expected_256.txt  fibonacci.jl  fibonacci.js  fibonacci.pl  fibonacci.py  fibonacci_Binet.jl  fibonacci_Dict.jl  fibonacci_Dict.js  fibonacci_Dict.pl  fibonacci_Dict.py  fibonacci_clz.jl  test_fib.sh  test_fib_doubling_gmp.sh  test_fib_doubling_gmp_cpp.sh  test_fib_doubling_mixing.sh  test_fib_iterative_gmp.sh  test_main.sh
